# Strixel

./: .gitmodules  CMakeLists.txt  Cargo.toml  README.md
src/: AlgSimple.cpp  AlgSimple.h  CMakeLists.txt  Preview.cpp  Preview.h  Solution.cpp  Solution.h  main.cpp  main.rs
tests/: CMakeLists.txt
